--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">The Mall BD</string>
+    <string name="baby_care">Baby Care</string>
+    <string name="women_category">Women</string>
+    <string name="men_category">Men</string>
+    <string name="all_category">All Categories</string>
+    <string name="new_product">New Products</string>
+    <string name="featured_products">Featured Products</string>
+    <string name="products">Products</string>
 </resources>
