--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">The Mall BD</string>
+    <string name="app_name">TheMall</string>
+    <string name="action_settings">Settings</string>
     <string name="baby_care">Baby Care</string>
     <string name="women_category">Women</string>
     <string name="men_category">Men</string>
@@ -7,4 +8,25 @@
     <string name="new_product">New Products</string>
     <string name="featured_products">Featured Products</string>
     <string name="products">Products</string>
+    <string name="nav_item_home">Home</string>
+    <string name="nav_item_my_mallbd">My MallBD</string>
+    <string name="nav_item_cart">Cart</string>
+    <string name="nav_item_wishlist">WishList</string>
+    <string name="nav_item_favorite">Favorite</string>
+    <string name="nav_item_settings">Settings</string>
+    <string name="nav_item_app_feedback">App Feedback</string>
+    <string name="nav_item_help_center">Help Center</string>
+    <string name="nav_item_about_us">About Us</string>
+    <string name="openDrawer">Open</string>
+    <string name="closeDrawer">Close</string>
+
+    <!-- navigation drawer item labels  -->
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
+        <item>@string/nav_item_my_mallbd</item>
+        <item>@string/nav_item_cart</item>
+        <item>@string/nav_item_wishlist</item>
+        <item>@string/nav_item_favorite</item>
+    </string-array>
+
 </resources>
