--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="price">PRICE</string>
+    <string name="quantity">Quantity</string>
+    <string name="free_shipping">Free Shipping</string>
+    <string name="description">Description</string>
+    <string name="add_to_cart">add to cart</string>
+    <string name="add_to_wishlist">Add to wishlist</string>
+    <string name="buy_now">buy now</string>
 
 </resources>
