product details done,add to cart done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="add_to_cart">add to cart</string>
     <string name="add_to_wishlist">Add to wishlist</string>
     <string name="buy_now">buy now</string>
+    <string name="title_activity_checkout">Checkout</string>
 
 </resources>
