--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="add_to_wishlist">Add to wishlist</string>
     <string name="buy_now">buy now</string>
     <string name="title_activity_checkout">Checkout</string>
+    <string name="contact_us">Contact</string>
 
     <string-array name="countries_array">
         <item>Country</item>
