product details layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="confirm_payment">Confrim Payment Method</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="price">PRICE</string>
+    <string name="price">Price:</string>
     <string name="quantity">Quantity</string>
     <string name="free_shipping">Free Shipping</string>
     <string name="description">Description</string>
@@ -49,6 +49,8 @@
     <string name="contact_us">Contact</string>
     <string name="account_info">Account Infromation</string>
     <string name="shipping_info">Shipping Infromation</string>
+    <string name="previous_price">PRP:  </string>
+    <string name="save_price">You Save: </string>
 
     <string-array name="countries_array">
         <item>Country</item>
@@ -294,6 +296,29 @@
         <item>Zambia</item>
         <item>Zimbabwe</item>
     </string-array>
+    <string-array name="quantity_number">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+    </string-array>
+
     <string name="title_activity_wish_list">WishListActivity</string>
 
 </resources>
