--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="check_out_fragment_start">New Customer Account and Address</string>
     <string name="delivery_address">Delivery Address</string>
     <string name="confirm_payment">Confrim Payment Method</string>
+    <string name="back_to_cart_text">Edit Cart</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="price">Price:</string>
@@ -324,6 +325,17 @@
         <item>20</item>
     </string-array>
 
+    <string-array name="cities_array">
+        <item>Dhaka</item>
+        <item>Chittagong</item>
+        <item>Sylhet</item>
+        <item>Khulna</item>
+    </string-array>
+
     <string name="title_activity_wish_list">WishListActivity</string>
+    <string name="delivery_method_text_dhaka_only">24 / 48 hours (within Dhaka only)</string>
+    <string name="delivery_method_text_outside_dhaka">2-4 days Depending on the Address ( Outside dhaka )</string>
+    <string name="cash_on_delivery_text">Cash On delivery</string>
+
 
 </resources>
