previous order history first page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="package_text">Package List</string>
     <string name="specail_Product_text">Special Discount</string>
     <string name="product_Packge_text">Product In This Package</string>
+    <string name="out_of_stock_text">Out of Stock</string>
 
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
