--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="quantity">Quantity</string>
     <string name="free_shipping">Free Shipping</string>
     <string name="description">Description</string>
-    <string name="add_to_cart">add to cart</string>
+    <string name="add_to_cart">add to Basket</string>
     <string name="add_to_wishlist">Add to wishlist</string>
     <string name="buy_now">buy now</string>
     <string name="title_activity_checkout">Checkout</string>
