--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,6 +337,8 @@
     <string name="delivery_method_text_dhaka_only">24 / 48 hours (within Dhaka only)</string>
     <string name="delivery_method_text_outside_dhaka">2-4 days Depending on the Address ( Outside dhaka )</string>
     <string name="cash_on_delivery_text">Cash On delivery</string>
+    <string name="title_activity_wallet_mix_payment_web_view">WalletMixPaymentWebViewActivity
+    </string>
 
 
 </resources>
