--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,5 +348,9 @@
     <string name="title_activity_wallet_mix_payment_web_view">WalletMixPaymentWebViewActivity
     </string>
 
+    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
 
 </resources>
