--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="check_out_fragment_start">New Customer Account and Address</string>
     <string name="delivery_address">Delivery Address</string>
     <string name="confirm_payment">Confirm Payment Method</string>
-    <string name="back_to_cart_text">Edit Cart</string>
+    <string name="back_to_cart_text">Edit Basket</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="price">Price:</string>
@@ -66,6 +66,7 @@
     <string name="bkash_ins_6">"Step : 6     Enter Counter No: 1"</string>
     <string name="bkash_ins_7">"Step : 7     Enter Your Pin to Confirm the Transaction: XXXX"</string>
     <string name="bkash_ins_8">"Step : 8     Enter Your Mobile Number and TrxID to complete your Transaction"</string>
+    <string name="gift_address">Please use another address for gift or invoice</string>
 
     <string-array name="countries_array">
         <item>Country</item>
